--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <div id="produtos">
                         <div class="produto">
                             <div id="henkiplus">
-                                <img src="../img/Henkiplus.png" alt="">
+                                <img src="/img/Henkiplus.png" alt="">
                                 <h1>Henki One+</h1>
                             </div>
                         </div>
                         <div class="produto">
                         <div id="henkimega">
-                            <img src="../img/Henkimega.png" alt="">
+                            <img src="/img/Henkimega.png" alt="">
                             <h1>Henki Mega</h1>
                         </div>
                     </div>
